2006-06-26  Roger Leigh  <rleigh@debian.org>

	* debian/schroot.docs: Add.  Include THANKS.

2006-06-26  Roger Leigh  <rleigh@debian.org>

	* scripts/setperms: New file.  Helper to set binaries setuid root
	for testing.

2006-06-26  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Bump version to 0.99.2.

	* NEWS: Bump version to 0.99.2.

	* configure.ac: Bump version to 0.99.2.

2006-06-26  Roger Leigh  <rleigh@debian.org>

	* TODO: Add TODO items for 1.0.

	* test/sbuild-keyfile.cc: Update testcases.

	* test/sbuild-parse-value.cc: Update testcases.

	* sbuild/sbuild-environment.h: Use new parse_value syntax.

	* sbuild/sbuild-keyfile.h: Use new parse_value syntax.
	get_list_value now correctly reports parse errors in list values.

	* sbuild/sbuild-parse-value.(cc|h): Convert from a class back into
	separate functions.  This gets rid of annoying uninitialised value
	errors.

2006-06-26  Roger Leigh  <rleigh@debian.org>

	* Version 0.99.1

	* debian/changelog: Finalise for 0.99.1.

	* sbuild/sbuild-session.cc: Document CHDIR_FB.

	* dchroot-dsa/dchroot-dsa.1.in: Document original dchroot-dsa
	authors.

2006-06-26  Roger Leigh  <rleigh@debian.org>

	* dchroot-dsa/dchroot-dsa-options.cc
	(check_options): Add check to ensure a chroot must be specified,
	to prevent use of the "default" fallback.

2006-06-25  Roger Leigh  <rleigh@debian.org>

	* Update API reference, fixing a few undocumented members and
	updating the doxygen config file.

2006-06-25  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Close #373943.

2006-06-25  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.cc, dchroot/dchroot.cc,
	dchroot-dsa/dchroot-dsa.cc: On an options parsing error, recommend
	the user use --help.

2006-06-25  Roger Leigh  <rleigh@debian.org>

	* All headers using tr1::shared_ptr or tr1::tuple include
	sbuild-tr1types.h.

	* sbuild/sbuild-tr1types.h: New header.  Include tr1 or boost
	shared_ptr and tuple headers into the tr1 namespace.
